--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
                 android:contentDescription="Disconnected Icon" />
 
             <TextView
+                android:id="@+id/tv_disconnected_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
